# cinema_library_website

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: code_style_checks.yaml
app/: manage.py
app/cinemalib/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/cinemalib/common/: models.py
app/cinemalib/migrations/: 0001_initial.py  0002_auto_20230508_2048.py
app/cinemalib/templates/: base.html
app/cinemalib/templates/account/: login.html
app/cinemalib/templates/cinemalib/: actor.html  base.html  movies.html  moviesingle.html
app/cinemalib/templates/cinemalib/tags/: last_movie.html
app/cinemalib/templates/include/: copyright.html  footer.html  header.html  sidebar.html
app/cinemalib/templates/pages/: about.html
app/cinemalib/templatetags/: cinemalib_tag.py
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  auth.py  ckeditor.py  common.py  database.py  email.py  logging.py  recaptcha.py
app/static/css/: bootstrap.css  style.css
app/static/js/: script.js
app/subscription/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/subscription/migrations/: 0001_initial.py
app/subscription/templates/subscription/tags/: form.html
app/subscription/templatetags/: subscription_tag.py
env/: .env.example
style/: .style.yapf
