[tool.poetry]
name = "movie-website"
version = "0.1.0"
description = ""
authors = ["kazila <mrkazzila@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_website"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.18"
pillow = "^9.4.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
django-ckeditor = "^6.5.1"
django-recaptcha3 = "^0.4.0"
django-allauth = "^0.54.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
  ".venv/*",
  "pytest_",
]
